# patho-pix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
demo/: hackathon.ipynb
models/: checkpoint_ts.pth
output/test_out/: normalized.tiff  normalized_tile_macenko.tiff  target_img.tiff  test.tiff
src/patho_pix/: example-test.py  io.py  main.py  normalization.py  test.ipynb  tiling.py
src/patho_pix/quality_assessment/: __init__.py  tile_artifact_score.py
src/patho_pix/steps/: step_quality_assessment.py
src/patho_pix/utils/: __init__.py  custom_tiler.py  jpeg_to_tiff.py  models.py
tests/: test_io.py  test_normalization.py  test_tiling.py
tests/quality_assessment/: test_tile_artifact_score.py
